--- a/force-app/main/default/lwc/recruitPortal/recruitPortal.css
+++ b/force-app/main/default/lwc/recruitPortal/recruitPortal.css
@@ -260,6 +260,91 @@ ul li a:hover{
     padding-bottom: 10px;
     text-align: center;
 }
+/* ============================Resume page CSS satrts here============================================================ */
+.c-container {
+    width:800px;
+    background: #d5d9d8;
+border: 1px solid #d8dde6;
+padding:0.5 rem;
+}
+.page-section {
+border:1px solid #ccc;
+padding:0.5 rem;
+}
+.page-header {
+height: 130px;
+background: #d4e0dd;
+border: 1px solid #ccc;
+padding:0.5 rem;
+}
+.page-right{  
+    height: 620px;
+    background: #e5f2ef;
+    border:1px solid #ccc;
+    padding:0.5 rem;
+}
+.page-left {
+    height: 620px;
+background: #b1c6be;
+border:1px solid #ccc;
+padding:0.5 rem;
+}
+
+/* ========================================================= */
+.resumeHead{
+    font-family: sans-serif;
+font-size: 1cm;
+padding:small;
+font-weight:bold;
+color: black;
+position: center;
+}
+
+.headingsDirection{
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    /* padding: 0 14px; */
+
+}
+.resumeHeadMail {
+    font-size: 0.4cm;
+    padding:small;
+    font-weight:bold;
+    color: black !important;
+    margin-left: 200px; 
+    margin-right: absolute;
+    
+    }
+.resumeHeadPhone {
+        font-size: 0.4cm;
+        padding:small;
+        font-weight:bold;
+        color: black !important;
+        /* margin-left: 75px;  */
+        /* margin-right: 30px;  */
+        
+ }
+ .res_Headings{
+        font-size: 0.4cm;
+        padding:small;
+        font-weight:bold;
+        color: black !important;
+        margin-left: 15px; 
+        margin-top: 20px;
+        /* margin-right: 30px;  */
+ }
+ .res_para{
+    /* font-size: 0.4cm; */
+        padding: 5 rem;
+        font-weight:bold;
+        color: black !important;
+        margin-left: 15px; 
+        /* margin-top: 20px; */
+        margin-right: 15px; 
+
+ }
+
 /*
 .icons a{
     text-decoration: none;
