--- a/force-app/main/default/lwc/resumePg_RecuPortal/resumePg_RecuPortal.css
+++ b/force-app/main/default/lwc/resumePg_RecuPortal/resumePg_RecuPortal.css
@@ -1,6 +1,6 @@
 .c-container {
     width:800px;
-    background: #90b7a9;
+    background: #d5d9d8;
 border: 1px solid #d8dde6;
 padding:0.5 rem;
 }
@@ -10,13 +10,13 @@ padding:0.5 rem;
 }
 .page-header {
 height: 130px;
-background: #2b624d;
+background: #d4e0dd;
 border: 1px solid #ccc;
 padding:0.5 rem;
 }
 .page-right{  
     height: 620px;
-    background: #76af7b;
+    background: #e5f2ef;
     border:1px solid #ccc;
     padding:0.5 rem;
 }
@@ -29,10 +29,11 @@ padding:0.5 rem;
 
 /* ========================================================= */
 .resumeHead{
+    font-family: sans-serif;
 font-size: 1cm;
 padding:small;
 font-weight:bold;
-color: azure;
+color: black;
 position: center;
 }
 
@@ -47,17 +48,36 @@ position: center;
     font-size: 0.4cm;
     padding:small;
     font-weight:bold;
-    color: #ffffff !important;
+    color: black !important;
     margin-left: 165px; 
     /* margin-right: 75px;  */
     
     }
-    .resumeHeadPhone {
+.resumeHeadPhone {
         font-size: 0.4cm;
         padding:small;
         font-weight:bold;
-        color: #ffffff !important;
+        color: black !important;
         /* margin-left: 75px;  */
         /* margin-right: 30px;  */
         
-        }
+ }
+ .res_Headings{
+        font-size: 0.4cm;
+        padding:small;
+        font-weight:bold;
+        color: black !important;
+        margin-left: 15px; 
+        margin-top: 20px;
+        /* margin-right: 30px;  */
+ }
+ .res_para{
+    /* font-size: 0.4cm; */
+        padding: 5 rem;
+        font-weight:bold;
+        color: black !important;
+        margin-left: 15px; 
+        /* margin-top: 20px; */
+        margin-right: 15px; 
+
+ }
